<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:text="@string/calculadora_de_salario_liquido"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="60dp"
        android:text="@string/currency_brl_sign"
        app:layout_constraintEnd_toStartOf="@+id/bruteSalaryEditText"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="115dp"
        android:layout_marginEnd="52dp"
        android:text="@string/currency_brl_sign"
        app:layout_constraintEnd_toStartOf="@+id/otherDeductionsEditText"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="84dp"
        android:text="@string/salario_bruto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/outros_descontos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/numero_de_dependentes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/otherDeductionsEditText"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/zero_money_placeholder"
        android:inputType="numberDecimal"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dependentNumberEditText"
        android:autofillHints="" />

    <EditText
        android:id="@+id/dependentNumberEditText"
        android:layout_width="150dp "
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/zero_placeholder"
        android:inputType="number"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bruteSalaryEditText"
        android:autofillHints="" />

    <EditText
        android:id="@+id/bruteSalaryEditText"
        android:layout_width="150dp "
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/zero_money_placeholder"
        android:inputType="numberDecimal"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:autofillHints="" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="157dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="160dp"
        android:background="#21264C"
        android:text="@string/calcular"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="calculate"
        />

</androidx.constraintlayout.widget.ConstraintLayout>